--- a/lab1/Albert_Koy_Lab_1.ipynb
+++ b/lab1/Albert_Koy_Lab_1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:202755b7e5c6d2ef5cdcf896c4662d51da21f9eb79226f2d24dd7e2f73e08e27"
+  "signature": "sha256:ab3edd5a12653d3355cd12a6210633c6bcaf4968bb3c0495cf02a020bf86a89e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -323,6 +323,7 @@
       "    # Create a linear regression model\n",
       "    regr = LinearRegression()\n",
       "    regr.fit(boston_X_train, boston_y_train)\n",
+      "    \n",
       "    # Print mean squared error\n",
       "    print(\"Residual sum of squares for %.2f training and %.2f testing data: %.2f\"\n",
       "          % (training_percent, 1 - training_percent, np.mean((regr.predict(boston_X_test) - boston_y_test) ** 2)))"
@@ -342,6 +343,142 @@
       }
      ],
      "prompt_number": 29
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Exercise 3.2 ---------------------------------------------------------\n",
+      "\n",
+      "num_training = .8 * n_samples\n",
+      "\n",
+      "# Split the data into training/testing sets\n",
+      "boston_X_train = boston.data[-num_training:]\n",
+      "boston_X_test = boston.data[:-num_training]\n",
+      "    \n",
+      "# Split the targets into training/testing sets\n",
+      "boston_y_train = boston.target[-num_training:]\n",
+      "boston_y_test = boston.target[:-num_training]\n",
+      "    \n",
+      "# Create a linear regression model\n",
+      "regr = LinearRegression()\n",
+      "regr.fit(boston_X_train, boston_y_train)\n",
+      "\n",
+      "# Find the best set of features\n",
+      "for i in range(1, boston_n_features):\n",
+      "    rfe = RFE(estimator=regr, n_features_to_select=i, step=1)\n",
+      "    regr_num_features = rfe.fit(boston_X_train, boston_y_train)\n",
+      "    \n",
+      "    print(\"Residual sum of squares for %d features: %.2f\"\n",
+      "          % (i, np.mean((regr_num_features.predict(boston_X_test) - boston_y_test) ** 2)))\n",
+      "    print \"rfe.ranking_:\"\n",
+      "    print rfe.ranking_\n",
+      "    print\n",
+      "\n",
+      "# The optimal is 3 features\n",
+      "print(\"Ideally, we'll train on 3 features: CHAS, NOX, and RM\\n\")\n",
+      "\n",
+      "# Train with the optimal set of features\n",
+      "# Training configurations\n",
+      "percent_training = [.2, .4, .6, .8]\n",
+      "\n",
+      "for training_percent in percent_training:\n",
+      "    num_training = boston_n_samples * training_percent\n",
+      "    \n",
+      "    # Grab three most important features\n",
+      "    boston_X_temp = boston.data[:,3:6]\n",
+      "    \n",
+      "    # Split the data into training/testing sets\n",
+      "    boston_X_train = boston_X_temp[-num_training:]\n",
+      "    boston_X_test = boston_X_temp[:-num_training]\n",
+      "    \n",
+      "    # Split the targets into training/testing sets\n",
+      "    boston_y_train = boston.target[-num_training:]\n",
+      "    boston_y_test = boston.target[:-num_training]\n",
+      "    \n",
+      "    # Create a linear regression model\n",
+      "    regr = LinearRegression()\n",
+      "    regr.fit(boston_X_train, boston_y_train)\n",
+      "    \n",
+      "    # Print mean squared error\n",
+      "    print(\"Residual sum of squares for 3 features with %.2f training and %.2f testing data: %.2f\"\n",
+      "          % (training_percent, 1 - training_percent, np.mean((regr.predict(boston_X_test) - boston_y_test) ** 2)))\n",
+      "    \n",
+      "print\n",
+      "print \"You see that the mean squared error increases for all splits except for the "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Residual sum of squares for 1 features: 45.21\n",
+        "rfe.ranking_:\n",
+        "[ 8 10  9  3  1  2 13  5  7 11  4 12  6]\n",
+        "\n",
+        "Residual sum of squares for 2 features: 12.78\n",
+        "rfe.ranking_:\n",
+        "[ 7  9  8  2  1  1 12  4  6 10  3 11  5]\n",
+        "\n",
+        "Residual sum of squares for 3 features: 11.78\n",
+        "rfe.ranking_:\n",
+        "[ 6  8  7  1  1  1 11  3  5  9  2 10  4]\n",
+        "\n",
+        "Residual sum of squares for 4 features: 12.43\n",
+        "rfe.ranking_:\n",
+        "[ 5  7  6  1  1  1 10  2  4  8  1  9  3]\n",
+        "\n",
+        "Residual sum of squares for 5 features: 12.53\n",
+        "rfe.ranking_:\n",
+        "[4 6 5 1 1 1 9 1 3 7 1 8 2]\n",
+        "\n",
+        "Residual sum of squares for 6 features: 12.20\n",
+        "rfe.ranking_:\n",
+        "[3 5 4 1 1 1 8 1 2 6 1 7 1]\n",
+        "\n",
+        "Residual sum of squares for 7 features: 12.33\n",
+        "rfe.ranking_:\n",
+        "[2 4 3 1 1 1 7 1 1 5 1 6 1]\n",
+        "\n",
+        "Residual sum of squares for 8 features: 12.24\n",
+        "rfe.ranking_:\n",
+        "[1 3 2 1 1 1 6 1 1 4 1 5 1]\n",
+        "\n",
+        "Residual sum of squares for 9 features: 12.01\n",
+        "rfe.ranking_:\n",
+        "[1 2 1 1 1 1 5 1 1 3 1 4 1]\n",
+        "\n",
+        "Residual sum of squares for 10 features: 12.80\n",
+        "rfe.ranking_:\n",
+        "[1 1 1 1 1 1 4 1 1 2 1 3 1]\n",
+        "\n",
+        "Residual sum of squares for 11 features: 12.52\n",
+        "rfe.ranking_:\n",
+        "[1 1 1 1 1 1 3 1 1 1 1 2 1]\n",
+        "\n",
+        "Residual sum of squares for 12 features: 12.38\n",
+        "rfe.ranking_:\n",
+        "[1 1 1 1 1 1 2 1 1 1 1 1 1]\n",
+        "\n",
+        "Ideally, we'll train on 3 features: CHAS, NOX, and RM\n",
+        "Residual sum of squares for 3 features with 0.20 training and 0.80 testing data: 67.67\n",
+        "Residual sum of squares for 3 features with 0.40 training and 0.60 testing data: 80.25\n",
+        "Residual sum of squares for 3 features with 0.60 training and 0.40 testing data: 25.25\n",
+        "Residual sum of squares for 3 features with 0.80 training and 0.20 testing data: 11.78\n"
+       ]
+      }
+     ],
+     "prompt_number": 44
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
