--- a/lab1/Albert_Koy_Lab_1.ipynb
+++ b/lab1/Albert_Koy_Lab_1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ab3edd5a12653d3355cd12a6210633c6bcaf4968bb3c0495cf02a020bf86a89e"
+  "signature": "sha256:e3854e12f82f802b4cd87ad6f0ecb837be6e32d6257984bf20629094407a53b3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -405,7 +405,7 @@
       "          % (training_percent, 1 - training_percent, np.mean((regr.predict(boston_X_test) - boston_y_test) ** 2)))\n",
       "    \n",
       "print\n",
-      "print \"You see that the mean squared error increases for all splits except for the "
+      "print \"You see that the mean squared error increases for all splits except for the 80%/20% split because features were chosen based on the 80%/20% split.\""
      ],
      "language": "python",
      "metadata": {},
@@ -463,27 +463,113 @@
         "[1 1 1 1 1 1 2 1 1 1 1 1 1]\n",
         "\n",
         "Ideally, we'll train on 3 features: CHAS, NOX, and RM\n",
+        "\n",
         "Residual sum of squares for 3 features with 0.20 training and 0.80 testing data: 67.67\n",
         "Residual sum of squares for 3 features with 0.40 training and 0.60 testing data: 80.25\n",
         "Residual sum of squares for 3 features with 0.60 training and 0.40 testing data: 25.25\n",
-        "Residual sum of squares for 3 features with 0.80 training and 0.20 testing data: 11.78\n"
+        "Residual sum of squares for 3 features with 0.80 training and 0.20 testing data: 11.78\n",
+        "\n",
+        "You see that the mean squared error increases for all splits except for the 80%/20% split because features were chosen based on the 80%/20% split.\n"
        ]
       }
      ],
-     "prompt_number": 44
+     "prompt_number": 45
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "# Exercise 4.1 ---------------------------------------------------------\n",
+      "from sklearn import svm\n",
+      "from sklearn.datasets import load_iris\n",
+      "\n",
+      "iris = load_iris()\n",
+      "n_samples, n_features = iris.data.shape\n",
+      "\n",
+      "# Split data into 80%/20% training/testing\n",
+      "num_training = n_samples * .8\n",
+      "iris_X_train = iris.data[-num_training:]\n",
+      "iris_X_test = iris.data[:-num_training]\n",
+      "\n",
+      "# Split targets into 80%/20% training/testing\n",
+      "iris_y_train = iris.target[-num_training:]\n",
+      "iris_y_test = iris.target[:-num_training]\n",
+      "\n",
+      "# Perform classification using a linear SVM ----------------\n",
+      "print \"Linear SVM:\"\n",
+      "# Create linear SVM \n",
+      "clf_linear = svm.SVC(kernel='linear')\n",
+      "\n",
+      "# Fit linear SVM\n",
+      "clf_linear.fit(iris_X_train, iris_y_train)\n",
+      "\n",
+      "# Predict class for testing data\n",
+      "pred = clf_linear.predict(iris_X_test)\n",
+      "\n",
+      "# Calculate prediction error for testing data\n",
+      "errors = 0.0\n",
+      "for i in range(len(pred)):\n",
+      "    if pred[i] != iris_y_test[i]:\n",
+      "        errors += 1.0\n",
+      "print \"Test data errors = \",errors, \"out of\", len(pred), \"predictions\"\n",
+      "\n",
+      "# Calculate prediction error for all points\n",
+      "total_pred = clf_linear.predict(iris.data)\n",
+      "errors = 0.0\n",
+      "for i in range(n_samples):\n",
+      "    if total_pred[i] != iris.target[i]:\n",
+      "        errors += 1.0\n",
+      "print \"Total errors = \",errors, \"out of\", len(total_pred), \"predictions\"\n",
+      "\n",
+      "# Perform classification using a non-linear SVM -------------------\n",
+      "print \"\\nNon-linear SVM:\"\n",
+      "# Create non-linear SVM using the Radial Basis Kernel function\n",
+      "clf_non_linear = svm.SVC(kernel='rbf')\n",
+      "\n",
+      "# Fit the svm\n",
+      "clf_non_linear.fit(iris_X_train, iris_y_train)\n",
+      "\n",
+      "# Calculate prediction error for testing data\n",
+      "pred = clf_non_linear.predict(iris_X_test)\n",
+      "errors = 0.0\n",
+      "for i in range(len(pred)):\n",
+      "    if pred[i] != iris_y_test[i]:\n",
+      "        errors += 1.0\n",
+      "print \"Test data errors = \",errors, \"out of\", len(pred), \"predictions\"\n",
+      "\n",
+      "# Calculate prediction error for all points\n",
+      "total_pred = clf_non_linear.predict(iris.data)\n",
+      "errors = 0.0\n",
+      "for i in range(len(total_pred)):\n",
+      "    if total_pred[i] != iris.target[i]:\n",
+      "        errors += 1.0\n",
+      "print \"Total errors = \",errors, \"out of\", len(total_pred), \"predictions\""
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Linear SVM:\n",
+        "Test data errors =  0.0 out of 30 predictions\n",
+        "Total errors =  1.0 out of 150 predictions\n",
+        "\n",
+        "Non-linear SVM:\n",
+        "Test data errors =  0.0 out of 30 predictions\n",
+        "Total errors =  2.0 out of 150 predictions\n"
+       ]
+      }
+     ],
+     "prompt_number": 52
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "# Exercise 4.2 ---------------------------------------------------------"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
