--- a/lab2/Albert Koy - Lab 2, Part 2.ipynb
+++ b/lab2/Albert Koy - Lab 2, Part 2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4035e441650be301b71050b89894468bbd040703fd0fba129c0b4c26d7cfdf44"
+  "signature": "sha256:e3e8f927b9d5a7a19cc2b037fa28193dc84818d38b46fc7198b41e3612dbb529"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -54,13 +54,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 3,
        "text": [
         "84"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -163,7 +163,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 4,
        "text": [
         "                                        name   player_id country_id  \\\n",
         "1   Aaron Peirsol                             PEIRSAAR01        USA   \n",
@@ -193,7 +193,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -516,7 +516,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 5,
        "text": [
         "                                country_name  num_players\n",
         "0   Algeria                                             4\n",
@@ -582,19 +582,395 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "\n",
+      "# Convert the above left outer join query (last question in the SQL assignment) into pandas equivalent.\n",
       "counts = pd.DataFrame({'count' : players[players.birthdate.str.contains('^1975')].groupby('country_id').size()}).reset_index()\n",
-      "final = pd.merge(countries, counts, how='left', on='country_id')[['name', 'count']]"
+      "pd.merge(countries, counts, how='left', on='country_id')[['name', 'count']].fillna(0)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>name</th>\n",
+        "      <th>count</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>0 </th>\n",
+        "      <td> Algeria                                 </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>1 </th>\n",
+        "      <td> Argentina                               </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2 </th>\n",
+        "      <td> Australia                               </td>\n",
+        "      <td> 3</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3 </th>\n",
+        "      <td> Austria                                 </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>4 </th>\n",
+        "      <td> The Bahamas                             </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>5 </th>\n",
+        "      <td> Barbados                                </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>6 </th>\n",
+        "      <td> Belarus                                 </td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>7 </th>\n",
+        "      <td> Brazil                                  </td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>8 </th>\n",
+        "      <td> Bulgaria                                </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>9 </th>\n",
+        "      <td> Canada                                  </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>10</th>\n",
+        "      <td> China                                   </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>11</th>\n",
+        "      <td> Cameroon                                </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>12</th>\n",
+        "      <td> Costa Rica                              </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>13</th>\n",
+        "      <td> Croatia                                 </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>14</th>\n",
+        "      <td> Cuba                                    </td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>15</th>\n",
+        "      <td> Czech Republic                          </td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>16</th>\n",
+        "      <td> Denmark                                 </td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>17</th>\n",
+        "      <td> Dominican Republic                      </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>18</th>\n",
+        "      <td> Eritrea                                 </td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>19</th>\n",
+        "      <td> Spain                                   </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>20</th>\n",
+        "      <td> Estonia                                 </td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>21</th>\n",
+        "      <td> Ethiopia                                </td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>22</th>\n",
+        "      <td> Finland                                 </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>23</th>\n",
+        "      <td> France                                  </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>24</th>\n",
+        "      <td> United Kingdom                          </td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>25</th>\n",
+        "      <td> Germany                                 </td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>26</th>\n",
+        "      <td> Greece                                  </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>27</th>\n",
+        "      <td> Hungary                                 </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>28</th>\n",
+        "      <td> Ireland                                 </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>29</th>\n",
+        "      <td> Iceland                                 </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>30</th>\n",
+        "      <td> Italy                                   </td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>31</th>\n",
+        "      <td> Jamaica                                 </td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>32</th>\n",
+        "      <td> Japan                                   </td>\n",
+        "      <td> 3</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>33</th>\n",
+        "      <td> Kazakhstan                              </td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>34</th>\n",
+        "      <td> Kenya                                   </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>35</th>\n",
+        "      <td> Saudi Arabia                            </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>36</th>\n",
+        "      <td> Latvia                                  </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>37</th>\n",
+        "      <td> Lithuania                               </td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>38</th>\n",
+        "      <td> Morocco                                 </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>39</th>\n",
+        "      <td> Mexico                                  </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>40</th>\n",
+        "      <td> Mozambique                              </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>41</th>\n",
+        "      <td> Netherlands                             </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>42</th>\n",
+        "      <td> Nigeria                                 </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>43</th>\n",
+        "      <td> Norway                                  </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>44</th>\n",
+        "      <td> Poland                                  </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>45</th>\n",
+        "      <td> Portugal                                </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>46</th>\n",
+        "      <td> Romania                                 </td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>47</th>\n",
+        "      <td> South Africa                            </td>\n",
+        "      <td> 4</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>48</th>\n",
+        "      <td> Russia                                  </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>49</th>\n",
+        "      <td> Slovenia                                </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>50</th>\n",
+        "      <td> Sri Lanka                               </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>51</th>\n",
+        "      <td> Slovakia                                </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>52</th>\n",
+        "      <td> Sweden                                  </td>\n",
+        "      <td> 2</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>53</th>\n",
+        "      <td> Trinidad and Tobago                     </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>54</th>\n",
+        "      <td> Turkey                                  </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>55</th>\n",
+        "      <td> Ukraine                                 </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>56</th>\n",
+        "      <td> United States                           </td>\n",
+        "      <td> 5</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>57</th>\n",
+        "      <td> Zimbabwe                                </td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>58 rows \u00d7 2 columns</p>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "                                        name  count\n",
+        "0   Algeria                                       0\n",
+        "1   Argentina                                     0\n",
+        "2   Australia                                     3\n",
+        "3   Austria                                       0\n",
+        "4   The Bahamas                                   0\n",
+        "5   Barbados                                      0\n",
+        "6   Belarus                                       1\n",
+        "7   Brazil                                        1\n",
+        "8   Bulgaria                                      0\n",
+        "9   Canada                                        0\n",
+        "10  China                                         0\n",
+        "11  Cameroon                                      0\n",
+        "12  Costa Rica                                    0\n",
+        "13  Croatia                                       0\n",
+        "14  Cuba                                          1\n",
+        "15  Czech Republic                                1\n",
+        "16  Denmark                                       1\n",
+        "17  Dominican Republic                            0\n",
+        "18  Eritrea                                       1\n",
+        "19  Spain                                         0\n",
+        "20  Estonia                                       1\n",
+        "21  Ethiopia                                      1\n",
+        "22  Finland                                       0\n",
+        "23  France                                        0\n",
+        "24  United Kingdom                                1\n",
+        "25  Germany                                       1\n",
+        "26  Greece                                        0\n",
+        "27  Hungary                                       0\n",
+        "28  Ireland                                       0\n",
+        "29  Iceland                                       0\n",
+        "30  Italy                                         1\n",
+        "31  Jamaica                                       1\n",
+        "32  Japan                                         3\n",
+        "33  Kazakhstan                                    1\n",
+        "34  Kenya                                         0\n",
+        "35  Saudi Arabia                                  0\n",
+        "36  Latvia                                        0\n",
+        "37  Lithuania                                     1\n",
+        "38  Morocco                                       0\n",
+        "39  Mexico                                        0\n",
+        "40  Mozambique                                    0\n",
+        "41  Netherlands                                   0\n",
+        "42  Nigeria                                       0\n",
+        "43  Norway                                        0\n",
+        "44  Poland                                        0\n",
+        "45  Portugal                                      0\n",
+        "46  Romania                                       1\n",
+        "47  South Africa                                  4\n",
+        "48  Russia                                        0\n",
+        "49  Slovenia                                      0\n",
+        "50  Sri Lanka                                     0\n",
+        "51  Slovakia                                      0\n",
+        "52  Sweden                                        2\n",
+        "53  Trinidad and Tobago                           0\n",
+        "54  Turkey                                        0\n",
+        "55  Ukraine                                       0\n",
+        "56  United States                                 5\n",
+        "57  Zimbabwe                                      0\n",
+        "\n",
+        "[58 rows x 2 columns]"
+       ]
+      }
+     ],
+     "prompt_number": 6
     }
    ],
    "metadata": {}
